# aim-navigation-2526-final-assessment

./: .gitignore  README.md  install_deps.py  requirements.txt
src/a_star_core/: package.xml  setup.cfg  setup.py
src/a_star_core/a_star_core/: __init__.py  a_star_planner.py
src/a_star_ros2/: package.xml  setup.cfg  setup.py
src/a_star_ros2/a_star_ros2/: __init__.py  map_profiles.py  map_provider_node.py  planner_node.py
src/a_star_ros2/launch/: a_star_demo.launch.py
src/a_star_ros2/rviz/: a_star_demo.rviz
