<?xml version="1.0"?>
<package format="3">
  <name>a_star_core</name>
  <version>0.0.1</version>
  <description>纯 Python 版 A* 栅格规划核心算法（不依赖 ROS2）。</description>

  <maintainer email="anon@todo.com">anon</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>python3</exec_depend>

  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

